[package]
name = "large-workspace"
version = "0.1.0"
authors = ["rustc-perf developers"]
edition = "2024"

[dependencies]
dep_410 = { path = "crates/dep_410" }
dep_411 = { path = "crates/dep_411" }
dep_412 = { path = "crates/dep_412" }
dep_413 = { path = "crates/dep_413" }
dep_414 = { path = "crates/dep_414" }
dep_415 = { path = "crates/dep_415" }
dep_416 = { path = "crates/dep_416" }
dep_417 = { path = "crates/dep_417" }
dep_418 = { path = "crates/dep_418" }
dep_419 = { path = "crates/dep_419" }
dep_420 = { path = "crates/dep_420" }
dep_421 = { path = "crates/dep_421" }
dep_422 = { path = "crates/dep_422" }
dep_423 = { path = "crates/dep_423" }
dep_424 = { path = "crates/dep_424" }
dep_425 = { path = "crates/dep_425" }
dep_426 = { path = "crates/dep_426" }
dep_427 = { path = "crates/dep_427" }
dep_428 = { path = "crates/dep_428" }
dep_429 = { path = "crates/dep_429" }
dep_430 = { path = "crates/dep_430" }
dep_431 = { path = "crates/dep_431" }
dep_432 = { path = "crates/dep_432" }
dep_433 = { path = "crates/dep_433" }
dep_434 = { path = "crates/dep_434" }
dep_435 = { path = "crates/dep_435" }
dep_436 = { path = "crates/dep_436" }
dep_437 = { path = "crates/dep_437" }
dep_438 = { path = "crates/dep_438" }
dep_439 = { path = "crates/dep_439" }
dep_440 = { path = "crates/dep_440" }
dep_441 = { path = "crates/dep_441" }
dep_442 = { path = "crates/dep_442" }
dep_443 = { path = "crates/dep_443" }
dep_444 = { path = "crates/dep_444" }
dep_445 = { path = "crates/dep_445" }
dep_446 = { path = "crates/dep_446" }
dep_447 = { path = "crates/dep_447" }
dep_448 = { path = "crates/dep_448" }
dep_449 = { path = "crates/dep_449" }
dep_450 = { path = "crates/dep_450" }
dep_451 = { path = "crates/dep_451" }
dep_452 = { path = "crates/dep_452" }
dep_453 = { path = "crates/dep_453" }
dep_454 = { path = "crates/dep_454" }
dep_455 = { path = "crates/dep_455" }
dep_456 = { path = "crates/dep_456" }
dep_457 = { path = "crates/dep_457" }
dep_458 = { path = "crates/dep_458" }
dep_459 = { path = "crates/dep_459" }
dep_460 = { path = "crates/dep_460" }
dep_461 = { path = "crates/dep_461" }
dep_462 = { path = "crates/dep_462" }
dep_463 = { path = "crates/dep_463" }
dep_464 = { path = "crates/dep_464" }
dep_465 = { path = "crates/dep_465" }
dep_466 = { path = "crates/dep_466" }
dep_467 = { path = "crates/dep_467" }
dep_468 = { path = "crates/dep_468" }
dep_469 = { path = "crates/dep_469" }
dep_470 = { path = "crates/dep_470" }
dep_471 = { path = "crates/dep_471" }
dep_472 = { path = "crates/dep_472" }
dep_473 = { path = "crates/dep_473" }
dep_474 = { path = "crates/dep_474" }
dep_475 = { path = "crates/dep_475" }
dep_476 = { path = "crates/dep_476" }
dep_477 = { path = "crates/dep_477" }
dep_478 = { path = "crates/dep_478" }
dep_479 = { path = "crates/dep_479" }
dep_480 = { path = "crates/dep_480" }
dep_481 = { path = "crates/dep_481" }
dep_482 = { path = "crates/dep_482" }
dep_483 = { path = "crates/dep_483" }
dep_484 = { path = "crates/dep_484" }
dep_485 = { path = "crates/dep_485" }
dep_486 = { path = "crates/dep_486" }
dep_487 = { path = "crates/dep_487" }
dep_488 = { path = "crates/dep_488" }
dep_489 = { path = "crates/dep_489" }
dep_490 = { path = "crates/dep_490" }
dep_491 = { path = "crates/dep_491" }
dep_492 = { path = "crates/dep_492" }
dep_493 = { path = "crates/dep_493" }
dep_494 = { path = "crates/dep_494" }
dep_495 = { path = "crates/dep_495" }
dep_496 = { path = "crates/dep_496" }
dep_497 = { path = "crates/dep_497" }
dep_498 = { path = "crates/dep_498" }
dep_499 = { path = "crates/dep_499" }
dep_500 = { path = "crates/dep_500" }
dep_501 = { path = "crates/dep_501" }
dep_502 = { path = "crates/dep_502" }
dep_503 = { path = "crates/dep_503" }
dep_504 = { path = "crates/dep_504" }
dep_505 = { path = "crates/dep_505" }
dep_506 = { path = "crates/dep_506" }
dep_507 = { path = "crates/dep_507" }
dep_508 = { path = "crates/dep_508" }
dep_509 = { path = "crates/dep_509" }
dep_510 = { path = "crates/dep_510" }
dep_511 = { path = "crates/dep_511" }
dep_512 = { path = "crates/dep_512" }
dep_513 = { path = "crates/dep_513" }
dep_514 = { path = "crates/dep_514" }
dep_515 = { path = "crates/dep_515" }
dep_516 = { path = "crates/dep_516" }
dep_517 = { path = "crates/dep_517" }
dep_518 = { path = "crates/dep_518" }
dep_519 = { path = "crates/dep_519" }
dep_520 = { path = "crates/dep_520" }
dep_521 = { path = "crates/dep_521" }
dep_522 = { path = "crates/dep_522" }
dep_523 = { path = "crates/dep_523" }
dep_524 = { path = "crates/dep_524" }
dep_525 = { path = "crates/dep_525" }
dep_526 = { path = "crates/dep_526" }
dep_527 = { path = "crates/dep_527" }
dep_528 = { path = "crates/dep_528" }
dep_529 = { path = "crates/dep_529" }
dep_530 = { path = "crates/dep_530" }
dep_531 = { path = "crates/dep_531" }
dep_532 = { path = "crates/dep_532" }
dep_533 = { path = "crates/dep_533" }
dep_534 = { path = "crates/dep_534" }
dep_535 = { path = "crates/dep_535" }
dep_536 = { path = "crates/dep_536" }
dep_537 = { path = "crates/dep_537" }
dep_538 = { path = "crates/dep_538" }
dep_539 = { path = "crates/dep_539" }
dep_540 = { path = "crates/dep_540" }
dep_541 = { path = "crates/dep_541" }
dep_542 = { path = "crates/dep_542" }
dep_543 = { path = "crates/dep_543" }
dep_544 = { path = "crates/dep_544" }
dep_545 = { path = "crates/dep_545" }
dep_546 = { path = "crates/dep_546" }
dep_547 = { path = "crates/dep_547" }
dep_548 = { path = "crates/dep_548" }
dep_549 = { path = "crates/dep_549" }
dep_550 = { path = "crates/dep_550" }
dep_551 = { path = "crates/dep_551" }
dep_552 = { path = "crates/dep_552" }
dep_553 = { path = "crates/dep_553" }
dep_554 = { path = "crates/dep_554" }
dep_555 = { path = "crates/dep_555" }
dep_556 = { path = "crates/dep_556" }
dep_557 = { path = "crates/dep_557" }
dep_558 = { path = "crates/dep_558" }
dep_559 = { path = "crates/dep_559" }
dep_560 = { path = "crates/dep_560" }
dep_561 = { path = "crates/dep_561" }
dep_562 = { path = "crates/dep_562" }
dep_563 = { path = "crates/dep_563" }
dep_564 = { path = "crates/dep_564" }
dep_565 = { path = "crates/dep_565" }
dep_566 = { path = "crates/dep_566" }
dep_567 = { path = "crates/dep_567" }
dep_568 = { path = "crates/dep_568" }
dep_569 = { path = "crates/dep_569" }
dep_570 = { path = "crates/dep_570" }
dep_571 = { path = "crates/dep_571" }
dep_572 = { path = "crates/dep_572" }
dep_573 = { path = "crates/dep_573" }
dep_574 = { path = "crates/dep_574" }
dep_575 = { path = "crates/dep_575" }
dep_576 = { path = "crates/dep_576" }
dep_577 = { path = "crates/dep_577" }
dep_578 = { path = "crates/dep_578" }
dep_579 = { path = "crates/dep_579" }
dep_580 = { path = "crates/dep_580" }
dep_581 = { path = "crates/dep_581" }
dep_582 = { path = "crates/dep_582" }
dep_583 = { path = "crates/dep_583" }
dep_584 = { path = "crates/dep_584" }
dep_585 = { path = "crates/dep_585" }
dep_586 = { path = "crates/dep_586" }
dep_587 = { path = "crates/dep_587" }
dep_588 = { path = "crates/dep_588" }
dep_589 = { path = "crates/dep_589" }
dep_590 = { path = "crates/dep_590" }
dep_591 = { path = "crates/dep_591" }
dep_592 = { path = "crates/dep_592" }
dep_593 = { path = "crates/dep_593" }
dep_594 = { path = "crates/dep_594" }
dep_595 = { path = "crates/dep_595" }
dep_596 = { path = "crates/dep_596" }
dep_597 = { path = "crates/dep_597" }
dep_598 = { path = "crates/dep_598" }
dep_599 = { path = "crates/dep_599" }
dep_600 = { path = "crates/dep_600" }
dep_601 = { path = "crates/dep_601" }
dep_602 = { path = "crates/dep_602" }
dep_603 = { path = "crates/dep_603" }
dep_604 = { path = "crates/dep_604" }
dep_605 = { path = "crates/dep_605" }
dep_606 = { path = "crates/dep_606" }
dep_607 = { path = "crates/dep_607" }
dep_608 = { path = "crates/dep_608" }
dep_609 = { path = "crates/dep_609" }
dep_610 = { path = "crates/dep_610" }
dep_611 = { path = "crates/dep_611" }
dep_612 = { path = "crates/dep_612" }
dep_613 = { path = "crates/dep_613" }
dep_614 = { path = "crates/dep_614" }
dep_615 = { path = "crates/dep_615" }
dep_616 = { path = "crates/dep_616" }
dep_617 = { path = "crates/dep_617" }
dep_618 = { path = "crates/dep_618" }
dep_619 = { path = "crates/dep_619" }
dep_620 = { path = "crates/dep_620" }
dep_621 = { path = "crates/dep_621" }
dep_622 = { path = "crates/dep_622" }
dep_623 = { path = "crates/dep_623" }
dep_624 = { path = "crates/dep_624" }
dep_625 = { path = "crates/dep_625" }
dep_626 = { path = "crates/dep_626" }
dep_627 = { path = "crates/dep_627" }
dep_628 = { path = "crates/dep_628" }
dep_629 = { path = "crates/dep_629" }
dep_630 = { path = "crates/dep_630" }
dep_631 = { path = "crates/dep_631" }
dep_632 = { path = "crates/dep_632" }
dep_633 = { path = "crates/dep_633" }
dep_634 = { path = "crates/dep_634" }
dep_635 = { path = "crates/dep_635" }
dep_636 = { path = "crates/dep_636" }
dep_637 = { path = "crates/dep_637" }
dep_638 = { path = "crates/dep_638" }
dep_639 = { path = "crates/dep_639" }
dep_640 = { path = "crates/dep_640" }
dep_641 = { path = "crates/dep_641" }
dep_642 = { path = "crates/dep_642" }
dep_643 = { path = "crates/dep_643" }
dep_644 = { path = "crates/dep_644" }
dep_645 = { path = "crates/dep_645" }
dep_646 = { path = "crates/dep_646" }
dep_647 = { path = "crates/dep_647" }
dep_648 = { path = "crates/dep_648" }
dep_649 = { path = "crates/dep_649" }
dep_650 = { path = "crates/dep_650" }
dep_651 = { path = "crates/dep_651" }
dep_652 = { path = "crates/dep_652" }
dep_653 = { path = "crates/dep_653" }
dep_654 = { path = "crates/dep_654" }
dep_655 = { path = "crates/dep_655" }
dep_656 = { path = "crates/dep_656" }
dep_657 = { path = "crates/dep_657" }
dep_658 = { path = "crates/dep_658" }
dep_659 = { path = "crates/dep_659" }
dep_660 = { path = "crates/dep_660" }
dep_661 = { path = "crates/dep_661" }
dep_662 = { path = "crates/dep_662" }
dep_663 = { path = "crates/dep_663" }
dep_664 = { path = "crates/dep_664" }
dep_665 = { path = "crates/dep_665" }
dep_666 = { path = "crates/dep_666" }
dep_667 = { path = "crates/dep_667" }
dep_668 = { path = "crates/dep_668" }
dep_669 = { path = "crates/dep_669" }
dep_670 = { path = "crates/dep_670" }
dep_671 = { path = "crates/dep_671" }
dep_672 = { path = "crates/dep_672" }
dep_673 = { path = "crates/dep_673" }
dep_674 = { path = "crates/dep_674" }
dep_675 = { path = "crates/dep_675" }
dep_676 = { path = "crates/dep_676" }
dep_677 = { path = "crates/dep_677" }
dep_678 = { path = "crates/dep_678" }
dep_679 = { path = "crates/dep_679" }
dep_680 = { path = "crates/dep_680" }
dep_681 = { path = "crates/dep_681" }
dep_682 = { path = "crates/dep_682" }
dep_683 = { path = "crates/dep_683" }
dep_684 = { path = "crates/dep_684" }
dep_685 = { path = "crates/dep_685" }
dep_686 = { path = "crates/dep_686" }
dep_687 = { path = "crates/dep_687" }
dep_688 = { path = "crates/dep_688" }
dep_689 = { path = "crates/dep_689" }
dep_690 = { path = "crates/dep_690" }
dep_691 = { path = "crates/dep_691" }
dep_692 = { path = "crates/dep_692" }
dep_693 = { path = "crates/dep_693" }
dep_694 = { path = "crates/dep_694" }
dep_695 = { path = "crates/dep_695" }
dep_696 = { path = "crates/dep_696" }
dep_697 = { path = "crates/dep_697" }
dep_698 = { path = "crates/dep_698" }
dep_699 = { path = "crates/dep_699" }
dep_700 = { path = "crates/dep_700" }
dep_701 = { path = "crates/dep_701" }
dep_702 = { path = "crates/dep_702" }
dep_703 = { path = "crates/dep_703" }
dep_704 = { path = "crates/dep_704" }
dep_705 = { path = "crates/dep_705" }
dep_706 = { path = "crates/dep_706" }
dep_707 = { path = "crates/dep_707" }
dep_708 = { path = "crates/dep_708" }
dep_709 = { path = "crates/dep_709" }
dep_710 = { path = "crates/dep_710" }
dep_711 = { path = "crates/dep_711" }
dep_712 = { path = "crates/dep_712" }
dep_713 = { path = "crates/dep_713" }
dep_714 = { path = "crates/dep_714" }
dep_715 = { path = "crates/dep_715" }
dep_716 = { path = "crates/dep_716" }
dep_717 = { path = "crates/dep_717" }
dep_718 = { path = "crates/dep_718" }
dep_719 = { path = "crates/dep_719" }
dep_720 = { path = "crates/dep_720" }
dep_721 = { path = "crates/dep_721" }
dep_722 = { path = "crates/dep_722" }
dep_723 = { path = "crates/dep_723" }
dep_724 = { path = "crates/dep_724" }
dep_725 = { path = "crates/dep_725" }
dep_726 = { path = "crates/dep_726" }
dep_727 = { path = "crates/dep_727" }
dep_728 = { path = "crates/dep_728" }
dep_729 = { path = "crates/dep_729" }
dep_730 = { path = "crates/dep_730" }
dep_731 = { path = "crates/dep_731" }
dep_732 = { path = "crates/dep_732" }
dep_733 = { path = "crates/dep_733" }
dep_734 = { path = "crates/dep_734" }
dep_735 = { path = "crates/dep_735" }
dep_736 = { path = "crates/dep_736" }
dep_737 = { path = "crates/dep_737" }
dep_738 = { path = "crates/dep_738" }
dep_739 = { path = "crates/dep_739" }
dep_740 = { path = "crates/dep_740" }
dep_741 = { path = "crates/dep_741" }
dep_742 = { path = "crates/dep_742" }
dep_743 = { path = "crates/dep_743" }
dep_744 = { path = "crates/dep_744" }
dep_745 = { path = "crates/dep_745" }
dep_746 = { path = "crates/dep_746" }
dep_747 = { path = "crates/dep_747" }
dep_748 = { path = "crates/dep_748" }
dep_749 = { path = "crates/dep_749" }
dep_750 = { path = "crates/dep_750" }
dep_751 = { path = "crates/dep_751" }
dep_752 = { path = "crates/dep_752" }
dep_753 = { path = "crates/dep_753" }
dep_754 = { path = "crates/dep_754" }
dep_755 = { path = "crates/dep_755" }
dep_756 = { path = "crates/dep_756" }
dep_757 = { path = "crates/dep_757" }
dep_758 = { path = "crates/dep_758" }
dep_759 = { path = "crates/dep_759" }
dep_760 = { path = "crates/dep_760" }
dep_761 = { path = "crates/dep_761" }
dep_762 = { path = "crates/dep_762" }
dep_763 = { path = "crates/dep_763" }
dep_764 = { path = "crates/dep_764" }
dep_765 = { path = "crates/dep_765" }
dep_766 = { path = "crates/dep_766" }
dep_767 = { path = "crates/dep_767" }
dep_768 = { path = "crates/dep_768" }
dep_769 = { path = "crates/dep_769" }
dep_770 = { path = "crates/dep_770" }
dep_771 = { path = "crates/dep_771" }
dep_772 = { path = "crates/dep_772" }
dep_773 = { path = "crates/dep_773" }
dep_774 = { path = "crates/dep_774" }
dep_775 = { path = "crates/dep_775" }
dep_776 = { path = "crates/dep_776" }
dep_777 = { path = "crates/dep_777" }
dep_778 = { path = "crates/dep_778" }
dep_779 = { path = "crates/dep_779" }
dep_780 = { path = "crates/dep_780" }
dep_781 = { path = "crates/dep_781" }
dep_782 = { path = "crates/dep_782" }
dep_783 = { path = "crates/dep_783" }
dep_784 = { path = "crates/dep_784" }
dep_785 = { path = "crates/dep_785" }
dep_786 = { path = "crates/dep_786" }
dep_787 = { path = "crates/dep_787" }
dep_788 = { path = "crates/dep_788" }
dep_789 = { path = "crates/dep_789" }
dep_790 = { path = "crates/dep_790" }
dep_791 = { path = "crates/dep_791" }
dep_792 = { path = "crates/dep_792" }
dep_793 = { path = "crates/dep_793" }
dep_794 = { path = "crates/dep_794" }
dep_795 = { path = "crates/dep_795" }
dep_796 = { path = "crates/dep_796" }
dep_797 = { path = "crates/dep_797" }
dep_798 = { path = "crates/dep_798" }
dep_799 = { path = "crates/dep_799" }
dep_800 = { path = "crates/dep_800" }
dep_801 = { path = "crates/dep_801" }
dep_802 = { path = "crates/dep_802" }
dep_803 = { path = "crates/dep_803" }
dep_804 = { path = "crates/dep_804" }
dep_805 = { path = "crates/dep_805" }
dep_806 = { path = "crates/dep_806" }
dep_807 = { path = "crates/dep_807" }
dep_808 = { path = "crates/dep_808" }
dep_809 = { path = "crates/dep_809" }
dep_810 = { path = "crates/dep_810" }
dep_811 = { path = "crates/dep_811" }
dep_812 = { path = "crates/dep_812" }
dep_813 = { path = "crates/dep_813" }
dep_814 = { path = "crates/dep_814" }
dep_815 = { path = "crates/dep_815" }
dep_816 = { path = "crates/dep_816" }
dep_817 = { path = "crates/dep_817" }
dep_818 = { path = "crates/dep_818" }
dep_819 = { path = "crates/dep_819" }
dep_820 = { path = "crates/dep_820" }
dep_821 = { path = "crates/dep_821" }
dep_822 = { path = "crates/dep_822" }
dep_823 = { path = "crates/dep_823" }
dep_824 = { path = "crates/dep_824" }
dep_825 = { path = "crates/dep_825" }
dep_826 = { path = "crates/dep_826" }
dep_827 = { path = "crates/dep_827" }
dep_828 = { path = "crates/dep_828" }
dep_829 = { path = "crates/dep_829" }
dep_830 = { path = "crates/dep_830" }
dep_831 = { path = "crates/dep_831" }
dep_832 = { path = "crates/dep_832" }
dep_833 = { path = "crates/dep_833" }
dep_834 = { path = "crates/dep_834" }
dep_835 = { path = "crates/dep_835" }
dep_836 = { path = "crates/dep_836" }
dep_837 = { path = "crates/dep_837" }
dep_838 = { path = "crates/dep_838" }
dep_839 = { path = "crates/dep_839" }
dep_840 = { path = "crates/dep_840" }
dep_841 = { path = "crates/dep_841" }
dep_842 = { path = "crates/dep_842" }
dep_843 = { path = "crates/dep_843" }
dep_844 = { path = "crates/dep_844" }
dep_845 = { path = "crates/dep_845" }
dep_846 = { path = "crates/dep_846" }
dep_847 = { path = "crates/dep_847" }
dep_848 = { path = "crates/dep_848" }
dep_849 = { path = "crates/dep_849" }
dep_850 = { path = "crates/dep_850" }
dep_851 = { path = "crates/dep_851" }
dep_852 = { path = "crates/dep_852" }
dep_853 = { path = "crates/dep_853" }
dep_854 = { path = "crates/dep_854" }
dep_855 = { path = "crates/dep_855" }
dep_856 = { path = "crates/dep_856" }
dep_857 = { path = "crates/dep_857" }
dep_858 = { path = "crates/dep_858" }
dep_859 = { path = "crates/dep_859" }
dep_860 = { path = "crates/dep_860" }
dep_861 = { path = "crates/dep_861" }
dep_862 = { path = "crates/dep_862" }
dep_863 = { path = "crates/dep_863" }
dep_864 = { path = "crates/dep_864" }
dep_865 = { path = "crates/dep_865" }
dep_866 = { path = "crates/dep_866" }
dep_867 = { path = "crates/dep_867" }
dep_868 = { path = "crates/dep_868" }
dep_869 = { path = "crates/dep_869" }
dep_870 = { path = "crates/dep_870" }
dep_871 = { path = "crates/dep_871" }
dep_872 = { path = "crates/dep_872" }
dep_873 = { path = "crates/dep_873" }
dep_874 = { path = "crates/dep_874" }
dep_875 = { path = "crates/dep_875" }
dep_876 = { path = "crates/dep_876" }
dep_877 = { path = "crates/dep_877" }
dep_878 = { path = "crates/dep_878" }
dep_879 = { path = "crates/dep_879" }
dep_880 = { path = "crates/dep_880" }
dep_881 = { path = "crates/dep_881" }
dep_882 = { path = "crates/dep_882" }
dep_883 = { path = "crates/dep_883" }
dep_884 = { path = "crates/dep_884" }
dep_885 = { path = "crates/dep_885" }
dep_886 = { path = "crates/dep_886" }
dep_887 = { path = "crates/dep_887" }
dep_888 = { path = "crates/dep_888" }
dep_889 = { path = "crates/dep_889" }
dep_890 = { path = "crates/dep_890" }
dep_891 = { path = "crates/dep_891" }
dep_892 = { path = "crates/dep_892" }
dep_893 = { path = "crates/dep_893" }
dep_894 = { path = "crates/dep_894" }
dep_895 = { path = "crates/dep_895" }
dep_896 = { path = "crates/dep_896" }
dep_897 = { path = "crates/dep_897" }
dep_898 = { path = "crates/dep_898" }
dep_899 = { path = "crates/dep_899" }
dep_900 = { path = "crates/dep_900" }
dep_901 = { path = "crates/dep_901" }
dep_902 = { path = "crates/dep_902" }
dep_903 = { path = "crates/dep_903" }
dep_904 = { path = "crates/dep_904" }
dep_905 = { path = "crates/dep_905" }
dep_906 = { path = "crates/dep_906" }
dep_907 = { path = "crates/dep_907" }
dep_908 = { path = "crates/dep_908" }
dep_909 = { path = "crates/dep_909" }

[workspace]
