[package]
name = "regex"
version = "0.1.80"  #:version
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/regex"
documentation = "https://doc.rust-lang.org/regex"
homepage = "https://github.com/rust-lang/regex"
description = """
An implementation of regular expressions for Rust. This implementation uses
finite automata and guarantees linear time matching on all inputs.
"""

[dependencies]
# For very fast prefix literal matching.
aho-corasick = "0.5.3"
# For skipping along search text quickly when a leading byte is known.
memchr = "0.1.9"
# For managing regex caches quickly across multiple threads.
thread_local = "0.2.4"
# For parsing regular expressions.
regex-syntax = { path = "regex-syntax", version = "0.3.8" }
# For accelerating text search.
simd = { version = "0.1.0", optional = true }
# For compiling UTF-8 decoding into automata.
utf8-ranges = "0.1.3"

[dev-dependencies]
# For examples.
lazy_static = "0.1"
# For property based tests.
quickcheck = "0.2"
# For generating random test data.
rand = "0.3"

[features]
# Enable to use the unstable pattern traits defined in std.
pattern = []
# Enable to use simd acceleration.
simd-accel = ["simd"]

[lib]
# There are no benchmarks in the library code itself
bench = false

[workspace]