[package]
name = "triagebot"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2021"
rust-version = "1.80.0"

[workspace]

[dependencies]
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
regex = "1"
anyhow = "1"
hex = "0.4"
parser = { path = "parser" }
rust_team_data = { git = "https://github.com/rust-lang/team" }
glob = "0.3.0"
toml = "0.8.20"
hyper = { version = "0.14.4", features = ["server", "stream"] }
tokio = { version = "1.7.1", features = ["macros", "time", "rt"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1.31"
uuid = { version = "0.8", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }
postgres-native-tls = "0.5.0"
native-tls = "0.2"
x509-cert = { version = "0.2.5", features = ["pem"] }
serde_path_to_error = "0.1.2"
octocrab = { version = "0.30.1", features = ["stream"] }
comrak = { version = "0.38", default-features = false }
route-recognizer = "0.3.0"
cynic = "3.2.2"
itertools = "0.14.0"
tower = { version = "0.4.13", features = ["util", "limit", "buffer", "load-shed"] }
github-graphql = { path = "github-graphql" }
rand = "0.8.5"
ignore = "0.4.18"
postgres-types = { version = "0.2.4", features = ["derive"] }
cron = { version = "0.15.0" }
bytes = "1.1.0"
structopt = "0.3.26"
hmac = "0.12.1"
subtle = "2.6.1"
sha2 = "0.10.9"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tera]
version = "1.3.1"
default-features = false

[dev-dependencies]
bon = "3"

[profile.release]
debug = 2
