[package]
name = "async-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benchlib = { path = "../../benchlib", features = ["compression"]}
tokio = { version = "1.0", features = ["full"] }

[workspace]