[package]
name = "nes-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benchlib = { path = "../../benchlib" }
nes = { git = "https://github.com/koute/pinky.git", rev = "af8ce410886dc44d7ce18ee1e5983d5c696698fe" }

[workspace]
